Fix GC sample q typo

--- a/src/gullcode.html
+++ b/src/gullcode.html
@@ -26,7 +26,7 @@
                 <h3>Tortise and the Hare</h3>
                 <p>
                     In a race to see who is the fastest, the tortoise and the hare face off. At the end of the race the tortoise crosses the finish line first. Because the hare was overconfident in his ability to win, he decided to run circles around the tortoise.
-                    <h4>Task: Your job is to determine how many times (if any) the hare de- cided to run circles around the tortoise and determine the length of the cycle.</h4>
+                    <h4>Task: Your job is to determine how many times (if any) the hare decided to run circles around the tortoise and determine the length of the cycle.</h4>
                     <h4>Specifications:</h4>
                     <ol>
                         <li>The route of the hare will be given as a singly-linked list, the only part of the link list you will see is the address of the head.
@@ -55,7 +55,7 @@
                 <h3>Retro Texting</h3>
                 <p>
                     Bellman went for a walk in the woods one beautiful spring morning. However, he lost track of his path and ended up lost. He has no idea where he is.
-                    <h4>Task: Write an algorithm that performs either f:¡steps¿ (to walk forward so many steps) or t¡num¿ (turn so many degrees)and using a subroutine we made, deter- mines if Bellman is out of the woods. If he isn’t keep doing the algorithm until he is.</h4>
+                    <h4>Task: Write an algorithm that performs either f:¡steps¿ (to walk forward so many steps) or t¡num¿ (turn so many degrees)and using a subroutine we made, determine if Bellman is out of the woods. If he isn’t keep doing the algorithm until he is.</h4>
                     <h4>Specifications:</h4>
                     <ol>
                         <li>The algorithm should minimize the worst-case behavior (Note: if you simply walk straight until you leave the forest, and the forest is very long, you may have a bad worst case scenario)
