Add exec board bullet points

--- a/src/execs.html
+++ b/src/execs.html
@@ -24,9 +24,9 @@
                 <small>President</small>
             </h3>
             <p>Our fearless leader
-            Dual (not double get it right) major in math and computer science
-            Likes driving and eating cheese puffs
-            Knows every professor and their mom
+            <li>Dual (not double get it right) major in math and computer science
+            <li>Likes driving and eating cheese puffs
+            <li>Knows every professor and their mom
             </p>
             <ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
@@ -54,12 +54,15 @@
             <h3>Jack Stoetzel
                 <small>Vice President</small>
             </h3>
-            <p>Our fearless second-in-command
-            Wizard of coding
-            Basically a hibernating bear
-            Has a beard now
-            Frequents Buffalo Wild Wings
-            Surprisingly is a fan of the Washington Redskins (HTTR)
+            <p>
+            <ul>
+                <li>Our fearless second-in-command
+                <li>Wizard of coding
+                <li>Basically a hibernating bear
+                <li>Has a beard now
+                <li>Frequents Buffalo Wild Wings
+                <li>Surprisingly is a fan of the Washington Redskins (HTTR)
+            </ul>
             </p>
             <ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
@@ -87,11 +90,14 @@
             <h3>Preston Mouw
                 <small>SGA Rep</small>
             </h3>
-            <p>Hype man for all the people Lela’s already talked to
-            Computational Math and and Computer Science
-            Plays Piano significantly better than nails on a chalkboard
-            Can solve any rubix cube
-            Challenge him to Smash, he’s a Bowser main
+            <p>
+            <ul>
+                <li>Hype man for all the people Lela’s already talked to
+                <li>Computational Math and and Computer Science
+                <li>Plays Piano significantly better than nails on a chalkboard
+                <li>Can solve any rubix cube
+                <li>Challenge him to Smash, he’s a Bowser main
+            </ul>
             </p>
             <ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
@@ -119,11 +125,14 @@
             <h3>Stephanie Warman
                 <small>Treasurer</small>
             </h3>
-            <p>Puts our account in the red
-            Only a double major in math and computer science
-            Does not have a beard
-            Retired tutor
-            Joins clubs because Lela forces her
+            <p>
+            <ul>
+                <li>Puts our account in the red
+                <li>Only a double major in math and computer science
+                <li>Does not have a beard
+                <li>Retired tutor
+                <li>Joins clubs because Lela forces her
+            </ul>
             </p>
             <ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
@@ -151,10 +160,13 @@
             <h3>Willl Freeman
                 <small>Secretary</small>
             </h3>
-            <p>Secretary of this Club (The guy who sends you all the emails) AND SGA Rep. for the SU Indies
-            Only member of exec board not a COSC Major (Information Systems)
-            Frequently visits the IT Help Desk (Interpret as you will)
-            All knowing oracle of all things Star Wars-related
+            <p>
+            <ul>
+                <li>Secretary of this Club (The guy who sends you all the emails) AND SGA Rep. for the SU Indies
+                <li>Only member of exec board not a COSC Major (Information Systems)
+                <li>Frequently visits the IT Help Desk (Interpret as you will)
+                <li>All knowing oracle of all things Star Wars-related
+            </ul>
             </p>
             <ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
@@ -183,11 +195,13 @@
                 <small>Web Master</small>
             </h3>
             <p>Web design warrior
-            Rare combination of outdoorsman and Computer Science major
-            Needs 1 & ½ strings to player happy birthday on guitar
-            Herbivore by choice
-            Beard
-            Rock climber, but loses to paper climber
+            <ul>
+                <li>Rare combination of outdoorsman and Computer Science major
+                <li>Needs 1 & ½ strings to player happy birthday on guitar
+                <li>Herbivore by choice
+                <li>Beard
+                <li>Rock climber, but loses to paper climber
+            </ul>
             </p>
             <ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
