Add exec social media links

--- a/src/execs.html
+++ b/src/execs.html
@@ -29,21 +29,13 @@
             <li>Knows every professor and their mom
             </p>
             <ul class="list-unstyled list-inline list-social-icons">
-                <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="Facebook"><i
-                        class="fa fa-facebook-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
+                <li class="tooltip-social linkedin-link"><a href="https://www.linkedin.com/in/lelabones/" data-toggle="tooltip"
                                                             data-placement="top" title="LinkedIn"><i
                         class="fa fa-linkedin-square fa-2x"></i></a>
                 </li>
-                <li class="tooltip-social twitter-link"><a href="#twitter-profile" data-toggle="tooltip"
-                                                           data-placement="top" title="Twitter"><i
-                        class="fa fa-twitter-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
-                                                               data-placement="top" title="Google+"><i
-                        class="fa fa-google-plus-square fa-2x"></i></a>
+                <li class="tooltip-social github-link"><a href="https://github.com/lelatbones" data-toggle="tooltip"
+                                                               data-placement="top" title="Github"><i
+                        class="fa fa-github-square fa-2x"></i></a>
                 </li>
             </ul>
         </div>
@@ -65,21 +57,9 @@
             </ul>
             </p>
             <ul class="list-unstyled list-inline list-social-icons">
-                <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="Facebook"><i
-                        class="fa fa-facebook-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="LinkedIn"><i
-                        class="fa fa-linkedin-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social twitter-link"><a href="#twitter-profile" data-toggle="tooltip"
-                                                           data-placement="top" title="Twitter"><i
-                        class="fa fa-twitter-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
-                                                               data-placement="top" title="Google+"><i
-                        class="fa fa-google-plus-square fa-2x"></i></a>
+                <li class="tooltip-social github-link"><a href="https://github.com/Jack-Stoetzel" data-toggle="tooltip"
+                                                               data-placement="top" title="Github"><i
+                        class="fa fa-github-square fa-2x"></i></a>
                 </li>
             </ul>
         </div>
@@ -100,21 +80,9 @@
             </ul>
             </p>
             <ul class="list-unstyled list-inline list-social-icons">
-                <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="Facebook"><i
-                        class="fa fa-facebook-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="LinkedIn"><i
-                        class="fa fa-linkedin-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social twitter-link"><a href="#twitter-profile" data-toggle="tooltip"
-                                                           data-placement="top" title="Twitter"><i
-                        class="fa fa-twitter-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
-                                                               data-placement="top" title="Google+"><i
-                        class="fa fa-google-plus-square fa-2x"></i></a>
+                <li class="tooltip-social github-link"><a href="https://github.com/preston-mouw" data-toggle="tooltip"
+                                                               data-placement="top" title="Github"><i
+                        class="fa fa-github-square fa-2x"></i></a>
                 </li>
             </ul>
         </div>
@@ -135,21 +103,9 @@
             </ul>
             </p>
             <ul class="list-unstyled list-inline list-social-icons">
-                <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="Facebook"><i
-                        class="fa fa-facebook-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="LinkedIn"><i
-                        class="fa fa-linkedin-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social twitter-link"><a href="#twitter-profile" data-toggle="tooltip"
-                                                           data-placement="top" title="Twitter"><i
-                        class="fa fa-twitter-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
-                                                               data-placement="top" title="Google+"><i
-                        class="fa fa-google-plus-square fa-2x"></i></a>
+                <li class="tooltip-social github-link"><a href="https://github.com/swarman2" data-toggle="tooltip"
+                                                               data-placement="top" title="Github"><i
+                        class="fa fa-github-square fa-2x"></i></a>
                 </li>
             </ul>
         </div>
@@ -169,21 +125,9 @@
             </ul>
             </p>
             <ul class="list-unstyled list-inline list-social-icons">
-                <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="Facebook"><i
-                        class="fa fa-facebook-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
+                <li class="tooltip-social linkedin-link"><a href="https://www.linkedin.com/in/wfreemanbowiesalisbury/" data-toggle="tooltip"
                                                             data-placement="top" title="LinkedIn"><i
                         class="fa fa-linkedin-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social twitter-link"><a href="#twitter-profile" data-toggle="tooltip"
-                                                           data-placement="top" title="Twitter"><i
-                        class="fa fa-twitter-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
-                                                               data-placement="top" title="Google+"><i
-                        class="fa fa-google-plus-square fa-2x"></i></a>
                 </li>
             </ul>
         </div>
@@ -204,21 +148,13 @@
             </ul>
             </p>
             <ul class="list-unstyled list-inline list-social-icons">
-                <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="Facebook"><i
-                        class="fa fa-facebook-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
+                <li class="tooltip-social linkedin-link"><a href="https://www.linkedin.com/in/jackson-bellinger-54b28987/" data-toggle="tooltip"
                                                             data-placement="top" title="LinkedIn"><i
                         class="fa fa-linkedin-square fa-2x"></i></a>
                 </li>
-                <li class="tooltip-social twitter-link"><a href="#twitter-profile" data-toggle="tooltip"
-                                                           data-placement="top" title="Twitter"><i
-                        class="fa fa-twitter-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
-                                                               data-placement="top" title="Google+"><i
-                        class="fa fa-google-plus-square fa-2x"></i></a>
+                <li class="tooltip-social github-link"><a href="https://github.com/JacksonBellinger" data-toggle="tooltip"
+                                                               data-placement="top" title="Github"><i
+                        class="fa fa-github-square fa-2x"></i></a>
                 </li>
             </ul>
         </div>
